[package]
name = "openapiv31"
version = "1.0.0"
authors = ["Joel Ellis <joel@ellis.link>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["openapi", "v3"]
homepage = "https://github.com/JoelEllis/openapiv31"
repository = "https://github.com/JoelEllis/openapiv31"
description = "This crate provides data structures that represent the OpenAPI v3.1.x specification easily deserializable with serde."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "1.0", features = ["serde-1"] }
schemars = { version = "0.8.8", default-features = false }

[dev-dependencies]
newline-converter = "0.2.0"
serde_yaml = "0.8"

[features]
skip_serializing_defaults = []
